Bug 164069 - Line used for pages in the Find sidebar does not respect dark mode
Summary: Line used for pages in the Find sidebar does not respect dark mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Dark-Mode
  Show dependency treegraph
 
Reported: 2024-11-27 12:57 UTC by Rafael Lima
Modified: 2024-11-28 13:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (32.61 KB, image/png)
2024-11-27 12:57 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-11-27 12:57:45 UTC
Created attachment 197823 [details]
Screenshot showing the problem

In Writer, the new Find sidebar draws a line for each "Page" entry, but it does not respect dark mode because it forces the line to be black.

See in QuickFindPanel::SearchFindsListRender that COL_BLACK is forced regardless of the background.

Present in current master

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 022851fdb5c1a758fd8468db362f2a0626503177
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: kf6 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Rafael Lima 2024-11-27 12:58:55 UTC
WIP patch here
https://gerrit.libreoffice.org/c/core/+/177415
Comment 2 Commit Notification 2024-11-28 00:42:11 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec958b578bd01071b4a6061f57007df6fec93aee

tdf#164069 Make line in Find sidebar respect dark mode

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.