tdf#164069 Make line in Find sidebar respect dark mode

Change-Id: Ie75cb0a581447e7f247be6b6d2bf1860ec74c8eb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177415
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins